syntax = "proto3";
package crowlabs.eta.market;

import "gogoproto/gogo.proto";
import "eta/market/params.proto";
import "eta/market/item.proto";
import "eta/market/listing.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/crow-labs/eta/x/market/types";

// GenesisState defines the market module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Item itemList = 2 [(gogoproto.nullable) = false];
  repeated Listing listingList = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
